add ctrl+gui combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1150,4 +1150,191 @@ ZMK_COMBO(as_lt, &kp LA(LS(LT)), LH0 RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_rpar, &kp LA(LS(RPAR)), LH0 RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_gt, &kp LA(LS(GT)), LH0 RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 
+// ****************************************************************************
+// alt+shift combos
+// ****************************************************************************
+
+ZMK_COMBO(as_a, &kp LA(LS(A)), LH0 RH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_b, &kp LA(LS(B)), LH0 RH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_c, &kp LA(LS(C)), LH0 RH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_d, &kp LA(LS(D)), LH0 RH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_e, &kp LA(LS(E)), LH0 RH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f, &kp LA(LS(F)), LH0 RH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_g, &kp LA(LS(G)), LH0 RH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_h, &kp LA(LS(H)), LH0 RH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_i, &kp LA(LS(I)), LH0 RH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_j, &kp LA(LS(J)), LH0 RH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_k, &kp LA(LS(K)), LH0 RH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_l, &kp LA(LS(L)), LH0 RH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_m, &kp LA(LS(M)), LH0 RH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_n, &kp LA(LS(N)), LH0 RH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_o, &kp LA(LS(O)), LH0 RH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_p, &kp LA(LS(P)), LH0 RH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_q, &kp LA(LS(Q)), LH0 RH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_r, &kp LA(LS(R)), LH0 RH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_s, &kp LA(LS(S)), LH0 RH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_t, &kp LA(LS(T)), LH0 RH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_u, &kp LA(LS(U)), LH0 RH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_v, &kp LA(LS(V)), LH0 RH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_w, &kp LA(LS(W)), LH0 RH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_x, &kp LA(LS(X)), LH0 RH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_y, &kp LA(LS(Y)), LH0 RH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_z, &kp LA(LS(Z)), LH0 RH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_enter, &kp LA(LS(ENTER)), LH0 RH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_tab, &kp LA(LS(TAB)), LH0 RH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_esc, &kp LA(LS(ESC)), LH0 RH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_space, &kp LA(LS(SPACE)), LH0 RH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_bspc, &kp LA(LS(BSPC)), LH0 RH1 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_up, &kp LA(LS(UP)), LH0 RH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_down, &kp LA(LS(DOWN)), LH0 RH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_left, &kp LA(LS(LEFT)), LH0 RH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_right, &kp LA(LS(RIGHT)), LH0 RH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_home, &kp LA(LS(HOME)), LH0 RH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_end, &kp LA(LS(END)), LH0 RH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_pg_up, &kp LA(LS(PG_UP)), LH0 RH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_pg_dn, &kp LA(LS(PG_DN)), LH0 RH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_0, &kp LA(LS(N0)), LH0 RH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_1, &kp LA(LS(N1)), LH0 RH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_2, &kp LA(LS(N2)), LH0 RH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_3, &kp LA(LS(N3)), LH0 RH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_4, &kp LA(LS(N4)), LH0 RH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_5, &kp LA(LS(N5)), LH0 RH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_6, &kp LA(LS(N6)), LH0 RH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_7, &kp LA(LS(N7)), LH0 RH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_8, &kp LA(LS(N8)), LH0 RH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_9, &kp LA(LS(N9)), LH0 RH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f1, &kp LA(LS(F1)), LH0 RH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f2, &kp LA(LS(F2)), LH0 RH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f3, &kp LA(LS(F3)), LH0 RH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f4, &kp LA(LS(F4)), LH0 RH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f5, &kp LA(LS(F5)), LH0 RH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f6, &kp LA(LS(F6)), LH0 RH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f7, &kp LA(LS(F7)), LH0 RH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f8, &kp LA(LS(F8)), LH0 RH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f9, &kp LA(LS(F9)), LH0 RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f10, &kp LA(LS(F10)), LH0 RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f11, &kp LA(LS(F11)), LH0 RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_f12, &kp LA(LS(F12)), LH0 RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_semicolon, &kp LA(LS(SEMICOLON)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_colon, &kp LA(LS(COLON)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_excl, &kp LA(LS(EXCL)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_dqt, &kp LA(LS(EXCL)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_at, &kp LA(LS(AT)), LH0 RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_hash, &kp LA(LS(HASH)), LH0 RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_dllr, &kp LA(LS(DLLR)), LH0 RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_prcnt, &kp LA(LS(PRCNT)), LH0 RH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_caret, &kp LA(LS(CARET)), LH0 RH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_amps, &kp LA(LS(AMPS)), LH0 RH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_star, &kp LA(LS(STAR)), LH0 RH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_tilde, &kp LA(LS(TILDE)), LH0 RH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_grave, &kp LA(LS(GRAVE)), LH0 RH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_bslh, &kp LA(LS(BSLH)), LH0 RH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_pipe, &kp LA(LS(PIPE)), LH0 RH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_under, &kp LA(LS(UNDER)), LH0 RH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_minus, &kp LA(LS(MINUS)), LH0 RH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_equal, &kp LA(LS(EQUAL)), LH0 RH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_plus, &kp LA(LS(PLUS)), LH0 RH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_slash, &kp LA(LS(SLASH)), LH0 RH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(as_rbrc, &kp LA(LS(RBRC)), LH0 RH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_rbkt, &kp LA(LS(RBKT)), LH0 RH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_lbrc, &kp LA(LS(LBRC)), LH0 RH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_lbkt, &kp LA(LS(LBKT)), LH0 RH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_lpar, &kp LA(LS(LPAR)), LH0 RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_lt, &kp LA(LS(LT)), LH0 RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_rpar, &kp LA(LS(RPAR)), LH0 RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_gt, &kp LA(LS(GT)), LH0 RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+// ****************************************************************************
+// ctrl+gui combos
+// ****************************************************************************
+
+ZMK_COMBO(cg_a, &kp LC(LG(A)), LH0 RH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_b, &kp LC(LG(B)), LH0 RH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_c, &kp LC(LG(C)), LH0 RH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_d, &kp LC(LG(D)), LH0 RH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_e, &kp LC(LG(E)), LH0 RH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f, &kp LC(LG(F)), LH0 RH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_g, &kp LC(LG(G)), LH0 RH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_h, &kp LC(LG(H)), LH0 RH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_i, &kp LC(LG(I)), LH0 RH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_j, &kp LC(LG(J)), LH0 RH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_k, &kp LC(LG(K)), LH0 RH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_l, &kp LC(LG(L)), LH0 RH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_m, &kp LC(LG(M)), LH0 RH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_n, &kp LC(LG(N)), LH0 RH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_o, &kp LC(LG(O)), LH0 RH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_p, &kp LC(LG(P)), LH0 RH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_q, &kp LC(LG(Q)), LH0 RH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_r, &kp LC(LG(R)), LH0 RH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_s, &kp LC(LG(S)), LH0 RH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_t, &kp LC(LG(T)), LH0 RH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_u, &kp LC(LG(U)), LH0 RH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_v, &kp LC(LG(V)), LH0 RH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_w, &kp LC(LG(W)), LH0 RH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_x, &kp LC(LG(X)), LH0 RH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_y, &kp LC(LG(Y)), LH0 RH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_z, &kp LC(LG(Z)), LH0 RH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_enter, &kp LC(LG(ENTER)), LH1 RH0 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_tab, &kp LC(LG(TAB)), LH1 RH0 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_esc, &kp LC(LG(ESC)), LH1 RH0 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_space, &kp LC(LG(SPACE)), LH1 RH0 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_bspc, &kp LC(LG(BSPC)), LH1 RH0 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_up, &kp LC(LG(UP)), LH1 RH0 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_down, &kp LC(LG(DOWN)), LH1 RH0 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_left, &kp LC(LG(LEFT)), LH1 RH0 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_right, &kp LC(LG(RIGHT)), LH1 RH0 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_home, &kp LC(LG(HOME)), LH1 RH0 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_end, &kp LC(LG(END)), LH1 RH0 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_pg_up, &kp LC(LG(PG_UP)), LH1 RH0 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_pg_dn, &kp LC(LG(PG_DN)), LH1 RH0 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_0, &kp LC(LG(N0)), LH1 RH0 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_1, &kp LC(LG(N1)), LH1 RH0 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_2, &kp LC(LG(N2)), LH1 RH0 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_3, &kp LC(LG(N3)), LH1 RH0 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_4, &kp LC(LG(N4)), LH1 RH0 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_5, &kp LC(LG(N5)), LH1 RH0 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_6, &kp LC(LG(N6)), LH1 RH0 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_7, &kp LC(LG(N7)), LH1 RH0 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_8, &kp LC(LG(N8)), LH1 RH0 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_9, &kp LC(LG(N9)), LH1 RH0 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f1, &kp LC(LG(F1)), LH1 RH0 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f2, &kp LC(LG(F2)), LH1 RH0 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f3, &kp LC(LG(F3)), LH1 RH0 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f4, &kp LC(LG(F4)), LH1 RH0 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f5, &kp LC(LG(F5)), LH1 RH0 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f6, &kp LC(LG(F6)), LH1 RH0 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f7, &kp LC(LG(F7)), LH1 RH0 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f8, &kp LC(LG(F8)), LH1 RH0 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f9, &kp LC(LG(F9)), LH1 RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f10, &kp LC(LG(F10)), LH1 RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f11, &kp LC(LG(F11)), LH1 RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_f12, &kp LC(LG(F12)), LH1 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_semicolon, &kp LC(LG(SEMICOLON)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_colon, &kp LC(LG(COLON)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_excl, &kp LC(LG(EXCL)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_dqt, &kp LC(LG(EXCL)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_at, &kp LC(LG(AT)), LH1 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_hash, &kp LC(LG(HASH)), LH1 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_dllr, &kp LC(LG(DLLR)), LH1 RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_prcnt, &kp LC(LG(PRCNT)), LH1 RH0 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_caret, &kp LC(LG(CARET)), LH1 RH0 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_amps, &kp LC(LG(AMPS)), LH1 RH0 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_star, &kp LC(LG(STAR)), LH1 RH0 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_tilde, &kp LC(LG(TILDE)), LH1 RH0 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_grave, &kp LC(LG(GRAVE)), LH1 RH0 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_bslh, &kp LC(LG(BSLH)), LH1 RH0 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_pipe, &kp LC(LG(PIPE)), LH1 RH0 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_under, &kp LC(LG(UNDER)), LH1 RH0 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_minus, &kp LC(LG(MINUS)), LH1 RH0 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_equal, &kp LC(LG(EQUAL)), LH1 RH0 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_plus, &kp LC(LG(PLUS)), LH1 RH0 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_slash, &kp LC(LG(SLASH)), LH1 RH0 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cg_rbrc, &kp LC(LG(RBRC)), LH1 RH0 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_rbkt, &kp LC(LG(RBKT)), LH1 RH0 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_lbrc, &kp LC(LG(LBRC)), LH1 RH0 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_lbkt, &kp LC(LG(LBKT)), LH1 RH0 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_lpar, &kp LC(LG(LPAR)), LH1 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_lt, &kp LC(LG(LT)), LH1 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_rpar, &kp LC(LG(RPAR)), LH1 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_gt, &kp LC(LG(GT)), LH1 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 /* vim: set ft=c tw=174RH1 : */
