add ctrl+shift combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1337,4 +1337,98 @@ ZMK_COMBO(cg_lpar, &kp LC(LG(LPAR)), LH1 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_lt, &kp LC(LG(LT)), LH1 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_rpar, &kp LC(LG(RPAR)), LH1 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_gt, &kp LC(LG(GT)), LH1 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+// ****************************************************************************
+// ctrl+shift combos
+// ****************************************************************************
+
+ZMK_COMBO(cs_a, &kp LC(LS(A)), RH0 RH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_b, &kp LC(LS(B)), RH0 RH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_c, &kp LC(LS(C)), RH0 RH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_d, &kp LC(LS(D)), RH0 RH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_e, &kp LC(LS(E)), RH0 RH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f, &kp LC(LS(F)), RH0 RH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_g, &kp LC(LS(G)), RH0 RH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_h, &kp LC(LS(H)), RH0 RH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_i, &kp LC(LS(I)), RH0 RH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_j, &kp LC(LS(J)), RH0 RH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_k, &kp LC(LS(K)), RH0 RH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_l, &kp LC(LS(L)), RH0 RH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_m, &kp LC(LS(M)), RH0 RH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_n, &kp LC(LS(N)), RH0 RH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_o, &kp LC(LS(O)), RH0 RH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_p, &kp LC(LS(P)), RH0 RH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_q, &kp LC(LS(Q)), RH0 RH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_r, &kp LC(LS(R)), RH0 RH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_s, &kp LC(LS(S)), RH0 RH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_t, &kp LC(LS(T)), RH0 RH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_u, &kp LC(LS(U)), RH0 RH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_v, &kp LC(LS(V)), RH0 RH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_w, &kp LC(LS(W)), RH0 RH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_x, &kp LC(LS(X)), RH0 RH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_y, &kp LC(LS(Y)), RH0 RH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_z, &kp LC(LS(Z)), RH0 RH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_enter, &kp LC(LS(ENTER)), RH1 RH0 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_tab, &kp LC(LS(TAB)), RH1 RH0 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_esc, &kp LC(LS(ESC)), RH1 RH0 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_space, &kp LC(LS(SPACE)), RH1 RH0 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_bspc, &kp LC(LS(BSPC)), RH1 RH0 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_up, &kp LC(LS(UP)), RH1 RH0 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_down, &kp LC(LS(DOWN)), RH1 RH0 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_left, &kp LC(LS(LEFT)), RH1 RH0 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_right, &kp LC(LS(RIGHT)), RH1 RH0 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_home, &kp LC(LS(HOME)), RH1 RH0 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_end, &kp LC(LS(END)), RH1 RH0 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_pg_up, &kp LC(LS(PG_UP)), RH1 RH0 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_pg_dn, &kp LC(LS(PG_DN)), RH1 RH0 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_0, &kp LC(LS(N0)), RH1 RH0 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_1, &kp LC(LS(N1)), RH1 RH0 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_2, &kp LC(LS(N2)), RH1 RH0 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_3, &kp LC(LS(N3)), RH1 RH0 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_4, &kp LC(LS(N4)), RH1 RH0 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_5, &kp LC(LS(N5)), RH1 RH0 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_6, &kp LC(LS(N6)), RH1 RH0 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_7, &kp LC(LS(N7)), RH1 RH0 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_8, &kp LC(LS(N8)), RH1 RH0 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_9, &kp LC(LS(N9)), RH1 RH0 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f1, &kp LC(LS(F1)), RH1 RH0 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f2, &kp LC(LS(F2)), RH1 RH0 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f3, &kp LC(LS(F3)), RH1 RH0 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f4, &kp LC(LS(F4)), RH1 RH0 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f5, &kp LC(LS(F5)), RH1 RH0 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f6, &kp LC(LS(F6)), RH1 RH0 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f7, &kp LC(LS(F7)), RH1 RH0 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f8, &kp LC(LS(F8)), RH1 RH0 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f9, &kp LC(LS(F9)), RH1 RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f10, &kp LC(LS(F10)), RH1 RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f11, &kp LC(LS(F11)), RH1 RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_f12, &kp LC(LS(F12)), RH1 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_semicolon, &kp LC(LS(SEMICOLON)), RH0 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_colon, &kp LC(LS(COLON)), RH0 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_excl, &kp LC(LS(EXCL)), RH0 RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_dqt, &kp LC(LS(EXCL)), RH0 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_at, &kp LC(LS(AT)), RH1 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_hash, &kp LC(LS(HASH)), RH1 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_dllr, &kp LC(LS(DLLR)), RH1 RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_prcnt, &kp LC(LS(PRCNT)), RH1 RH0 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_caret, &kp LC(LS(CARET)), RH1 RH0 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_amps, &kp LC(LS(AMPS)), RH1 RH0 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_star, &kp LC(LS(STAR)), RH1 RH0 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_tilde, &kp LC(LS(TILDE)), RH1 RH0 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_grave, &kp LC(LS(GRAVE)), RH1 RH0 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_bslh, &kp LC(LS(BSLH)), RH1 RH0 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_pipe, &kp LC(LS(PIPE)), RH1 RH0 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_under, &kp LC(LS(UNDER)), RH1 RH0 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_minus, &kp LC(LS(MINUS)), RH1 RH0 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_equal, &kp LC(LS(EQUAL)), RH1 RH0 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_plus, &kp LC(LS(PLUS)), RH1 RH0 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_slash, &kp LC(LS(SLASH)), RH1 RH0 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cs_rbrc, &kp LC(LS(RBRC)), RH1 RH0 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_rbkt, &kp LC(LS(RBKT)), RH1 RH0 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_lbrc, &kp LC(LS(LBRC)), RH1 RH0 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_lbkt, &kp LC(LS(LBKT)), RH1 RH0 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_lpar, &kp LC(LS(LPAR)), RH1 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_lt, &kp LC(LS(LT)), RH1 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_rpar, &kp LC(LS(RPAR)), RH1 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_gt, &kp LC(LS(GT)), RH1 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 /* vim: set ft=c tw=174RH1 : */
