add gui+shift combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1431,4 +1431,99 @@ ZMK_COMBO(cs_lpar, &kp LC(LS(LPAR)), RH1 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_lt, &kp LC(LS(LT)), RH1 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_rpar, &kp LC(LS(RPAR)), RH1 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_gt, &kp LC(LS(GT)), RH1 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+// ****************************************************************************
+// gui+shift combos
+// ****************************************************************************
+
+ZMK_COMBO(gs_a, &kp LG(LS(A)), RH0 LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_b, &kp LG(LS(B)), RH0 LH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_c, &kp LG(LS(C)), RH0 LH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_d, &kp LG(LS(D)), RH0 LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_e, &kp LG(LS(E)), RH0 LH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f, &kp LG(LS(F)), RH0 LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_g, &kp LG(LS(G)), RH0 LH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_h, &kp LG(LS(H)), RH0 LH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_i, &kp LG(LS(I)), RH0 LH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_j, &kp LG(LS(J)), RH0 LH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_k, &kp LG(LS(K)), RH0 LH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_l, &kp LG(LS(L)), RH0 LH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_m, &kp LG(LS(M)), RH0 LH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_n, &kp LG(LS(N)), RH0 LH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_o, &kp LG(LS(O)), RH0 LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_p, &kp LG(LS(P)), RH0 LH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_q, &kp LG(LS(Q)), RH0 LH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_r, &kp LG(LS(R)), RH0 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_s, &kp LG(LS(S)), RH0 LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_t, &kp LG(LS(T)), RH0 LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_u, &kp LG(LS(U)), RH0 LH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_v, &kp LG(LS(V)), RH0 LH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_w, &kp LG(LS(W)), RH0 LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_x, &kp LG(LS(X)), RH0 LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_y, &kp LG(LS(Y)), RH0 LH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_z, &kp LG(LS(Z)), RH0 LH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_enter, &kp LG(LS(ENTER)), RH1 LH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_tab, &kp LG(LS(TAB)), RH1 LH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_esc, &kp LG(LS(ESC)), RH1 LH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_space, &kp LG(LS(SPACE)), RH1 LH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_bspc, &kp LG(LS(BSPC)), RH1 LH1 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_up, &kp LG(LS(UP)), RH1 LH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_down, &kp LG(LS(DOWN)), RH1 LH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_left, &kp LG(LS(LEFT)), RH1 LH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_right, &kp LG(LS(RIGHT)), RH1 LH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_home, &kp LG(LS(HOME)), RH1 LH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_end, &kp LG(LS(END)), RH1 LH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_pg_up, &kp LG(LS(PG_UP)), RH1 LH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_pg_dn, &kp LG(LS(PG_DN)), RH1 LH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_0, &kp LG(LS(N0)), RH1 LH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_1, &kp LG(LS(N1)), RH1 LH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_2, &kp LG(LS(N2)), RH1 LH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_3, &kp LG(LS(N3)), RH1 LH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_4, &kp LG(LS(N4)), RH1 LH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_5, &kp LG(LS(N5)), RH1 LH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_6, &kp LG(LS(N6)), RH1 LH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_7, &kp LG(LS(N7)), RH1 LH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_8, &kp LG(LS(N8)), RH1 LH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_9, &kp LG(LS(N9)), RH1 LH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f1, &kp LG(LS(F1)), RH1 LH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f2, &kp LG(LS(F2)), RH1 LH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f3, &kp LG(LS(F3)), RH1 LH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f4, &kp LG(LS(F4)), RH1 LH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f5, &kp LG(LS(F5)), RH1 LH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f6, &kp LG(LS(F6)), RH1 LH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f7, &kp LG(LS(F7)), RH1 LH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f8, &kp LG(LS(F8)), RH1 LH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f9, &kp LG(LS(F9)), RH1 LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f10, &kp LG(LS(F10)), RH1 LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f11, &kp LG(LS(F11)), RH1 LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_f12, &kp LG(LS(F12)), RH1 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_semicolon, &kp LG(LS(SEMICOLON)), RH0 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_colon, &kp LG(LS(COLON)), RH0 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_excl, &kp LG(LS(EXCL)), RH0 LH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_dqt, &kp LG(LS(EXCL)), RH0 LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_at, &kp LG(LS(AT)), RH1 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_hash, &kp LG(LS(HASH)), RH1 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_dllr, &kp LG(LS(DLLR)), RH1 LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_prcnt, &kp LG(LS(PRCNT)), RH1 LH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_caret, &kp LG(LS(CARET)), RH1 LH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_amps, &kp LG(LS(AMPS)), RH1 LH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_star, &kp LG(LS(STAR)), RH1 LH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_tilde, &kp LG(LS(TILDE)), RH1 LH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_grave, &kp LG(LS(GRAVE)), RH1 LH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_bslh, &kp LG(LS(BSLH)), RH1 LH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_pipe, &kp LG(LS(PIPE)), RH1 LH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_under, &kp LG(LS(UNDER)), RH1 LH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_minus, &kp LG(LS(MINUS)), RH1 LH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_equal, &kp LG(LS(EQUAL)), RH1 LH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_plus, &kp LG(LS(PLUS)), RH1 LH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_slash, &kp LG(LS(SLASH)), RH1 LH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(gs_rbrc, &kp LG(LS(RBRC)), RH1 LH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_rbkt, &kp LG(LS(RBKT)), RH1 LH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_lbrc, &kp LG(LS(LBRC)), RH1 LH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_lbkt, &kp LG(LS(LBKT)), RH1 LH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_lpar, &kp LG(LS(LPAR)), RH1 LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_lt, &kp LG(LS(LT)), RH1 LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_rpar, &kp LG(LS(RPAR)), RH1 LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_gt, &kp LG(LS(GT)), RH1 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+
 /* vim: set ft=c tw=174RH1 : */
